keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.3
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: kc-persistent-storage
              mountPath: /var/kc
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
      volumes:
        - name: kc-persistent-storage
          persistentVolumeClaim:
            claimName: kc-volume-claim
